--- a/style.css
+++ b/style.css
@@ -21,38 +21,13 @@
     background: var(--second-color);
 }
 
-/* Popup Styles */
-.subscribe-popup {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
-}
-
-.popup-content {
-    background: #fff;
-    padding: 20px;
-    max-width: 400px;
-    margin: auto;
-    border-radius: 5px;
-    text-align: center;
-}
-
-.close-popup {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-}
-
 a {
     text-decoration: none;
+    color: white;
+}
+
+p{
+    justify-content: justify;
 }
 
 li {
@@ -73,10 +48,6 @@ section {
     width: 100%;
 }
 
-
-a {
-    color: #fff;
-}
 
 /* Header */
 :root {
@@ -212,6 +183,18 @@ header.shadow .logo {
 }
 
 
+.latestText {
+    padding-left: 50rem;
+}
+
+.discover{
+    padding-left: 1rem;
+}
+
+.bullet-list li{
+    list-style-type:circle; /* You can use 'disc', 'circle', or 'square' for different bullet styles */
+    margin-left: 50px; /* Adjust the left margin as needed */
+}
 
 
 .about {
@@ -221,6 +204,10 @@ header.shadow .logo {
     justify-content: center;
     align-items: center;
 }
+
+.aboutus p {
+      text-align: justify;
+    }
 
 .about .contentBx {
     max-width: 50%;
@@ -234,6 +221,7 @@ header.shadow .logo {
     color: #111;
     font-size: 2rem;
     margin-bottom: 10px;
+    text-align: justify;
 }
 
 
@@ -701,3 +689,4 @@ footer p {
 .active-link {
     color: chocolate !important; /* Add !important to override other styles */
 }
+
