--- a/restaurants.css
+++ b/restaurants.css
@@ -93,7 +93,7 @@ header {
     left: 0;
     width: 100%;
     z-index: 200;
-    background: var(--bg-color);
+    background: var(--text-color);
     /* Set the background color using the custom property */
     box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
     transition: .5s;
@@ -108,32 +108,33 @@ header.shadow {
 header.shadow .logo {
     color: var(--text-color);
 }
-
-.nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 18px 0;
+.nav{
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 18px 0;
 }
 
 .nav-links {
-    display: inline-flex;
-    gap: 50px;
-    align-items: center;
-    /* Adjust the gap as needed */
+display: inline-flex;
+gap: 50px;
+align-items: center;
+
 }
 
 .nav-links a {
-    text-decoration: none;
-    color: #111;
-    font-size: 1.1rem;
-    font-weight: 500;
-    transition: color 0.3s;
+text-decoration: none;
+color: white;
+font-size: 1.1rem;
+font-weight: 500;
+transition: color 0.3s;
 }
 
+
+
 .nav-links a:hover {
-    color: chocolate;
-    /* Change the color on hover as needed */
+color: chocolate;
+/* Change the color on hover as needed */
 }
 
 /* Add this to your CSS file */
@@ -187,10 +188,9 @@ header.shadow .logo {
 .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: #111;
+    color: var(--bg-color);
     padding-left: 510;
 }
-
 
 .subscribe {
     position: relative;
