--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
     left: 0;
     width: 100%;
     z-index: 200;
-    background: var(--bg-color);
+    background: var(--text-color);
     /* Set the background color using the custom property */
     box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
     transition: .5s;
@@ -80,6 +80,7 @@ header.shadow .logo {
     color: var(--text-color);
 }
 
+
 .nav {
     display: flex;
     align-items: center;
@@ -91,16 +92,18 @@ header.shadow .logo {
     display: inline-flex;
     gap: 50px;
     align-items: center;
-    /* Adjust the gap as needed */
+    
 }
 
 .nav-links a {
     text-decoration: none;
-    color: #111;
+    color: white;
     font-size: 1.1rem;
     font-weight: 500;
     transition: color 0.3s;
 }
+
+
 
 .nav-links a:hover {
     color: chocolate;
@@ -158,7 +161,7 @@ header.shadow .logo {
 .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: #111;
+    color: var(--bg-color);
     padding-left: 510;
 }
 
