--- a/about.css
+++ b/about.css
@@ -23,6 +23,11 @@
 
 a {
     text-decoration: none;
+    color: white;
+}
+
+p {
+    text-align: justify;
 }
 
 li {
@@ -33,22 +38,14 @@ img {
     width: 100%;
 }
 
-section {
-    padding: 3rem 0 2rem;
-}
 
 section {
+    padding: 3rem 0 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-
-.share {
-    margin-bottom: 20px; /* Add some bottom margin to separate the text and icons */
-}
-
-
 
 .container {
     max-width: 1800px;
@@ -60,10 +57,6 @@ section {
     max-width: 1500px;
     margin: auto;
     width: 100%;
-}
-
-a {
-    color: #fff;
 }
 
 /* Header */
@@ -85,12 +78,15 @@ header {
     /* Set the background color using the custom property */
     box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
     transition: .5s;
-    padding-left: 12.5rem;
+    height: 85px;
+    /* Set the fixed height of the header */
+    background-color: black;
+    /* Add your desired background color */
 }
 
 header.shadow {
     background: var(--bg-color);
-    box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
+    box-shadow: 0 4px 7px hsl(0 6% 17% / 13%);
     transition: .5s;
 }
 
@@ -98,38 +94,41 @@ header.shadow .logo {
     color: var(--text-color);
 }
 
-.active-link{
-    color: chocolate;
-}
-.nav{
+
+.nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 18px 0;
-    padding-right: 3.1rem;
-    }
-    
-    .nav-links {
-    display: inline-flex;
+}
+
+.nav-links {
+    display: flex;
     gap: 50px;
     align-items: center;
-    
-    }
-    
-    .nav-links a {
+
+}
+
+.nav-links a {
     text-decoration: none;
     color: white;
     font-size: 1.1rem;
     font-weight: 500;
     transition: color 0.3s;
-    }
-    
-    
-    
-    .nav-links a:hover {
+}
+
+
+
+.nav-links a:hover {
     color: chocolate;
-    /* Change the color on hover as needed */
-    }
+}
+
+.container {
+    max-width: 1500px;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+}
 
 /* Dropdown container */
 .dropdown {
@@ -157,7 +156,7 @@ header.shadow .logo {
     z-index: 1;
 }
 
-/* Links inside the dropdown */
+/* Links inside the dropdown (Barangay) */
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -165,13 +164,17 @@ header.shadow .logo {
     display: block;
 }
 
-/* Change color on hover */
 .dropdown-content a:hover {
     background-color: #f1f1f1;
 }
 
-/* Show the dropdown on hover */
 .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.logoimg {
+    width: 80px;
+    height: 80px;
     display: block;
 }
 
@@ -182,7 +185,6 @@ header.shadow .logo {
     padding-left: 510;
 }
 
-
 .subscribe {
     position: relative;
     display: inline-block;
@@ -190,9 +192,9 @@ header.shadow .logo {
     background: #fff;
     border: .8px solid #111;
     color: #333;
+
     text-decoration: none;
     transition: 0.5s;
-    margin-right: 9.4rem;
 }
 
 .subscribe:hover {
@@ -201,7 +203,6 @@ header.shadow .logo {
     background: rgb(255, 139, 56);
     transition: .5s;
 }
-
 
 
 .about {
@@ -378,8 +379,6 @@ p a {
 
 p a:hover {
     color: rgb(255, 152, 78);
-    /* Change color on hover for better interaction */
-
 }
 
 
@@ -427,11 +426,12 @@ footer p {
     font-size: 20px;
 }
 
-.share-icon{
+.share-icon {
     margin: 20px;
     display: flex;
     align-items: center;
 }
+
 .share-icons li {
     list-style: none;
 }
@@ -458,6 +458,7 @@ footer p {
     color: #fff;
     font-size: 20px;
 }
+
 .quicklinks {
     position: relative;
     width: 25%;
@@ -544,11 +545,14 @@ footer p {
 }
 
 .active-link {
-    color: chocolate !important; /* Add !important to override other styles */
+    color: chocolate !important;
+    /* Add !important to override other styles */
 }
-p {
-    text-align: justify;
+
+.scroll-logo {
+    content: url('images/logooo.png');
 }
+
 
 .title-text {
     text-align: justify;
