--- a/subscribeForm.css
+++ b/subscribeForm.css
@@ -15,28 +15,6 @@
     /* Set your desired text color */
 }
 
-header {
-    position: fixed;
-    display: inline-block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 200;
-    background: var(--bg-color);
-    /* Set the background color using the custom property */
-    box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
-    transition: .5s;
-}
-
-header.shadow {
-    background: var(--bg-color);
-    box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
-    transition: .5s;
-}
-
-header.shadow .logo {
-    color: var(--text-color);
-}
 
 .nav {
     display: flex;
@@ -47,11 +25,9 @@ header.shadow .logo {
 
 .nav-links {
     display: inline-flex;
-    gap: 50px;
     align-items: center;
-    padding-left: 2rem;
+    margin-right: 3rem;
 
-    /* Adjust the gap as needed */
 }
 
 .nav-links a {
@@ -61,6 +37,8 @@ header.shadow .logo {
     font-weight: 500;
     transition: color 0.3s;
 }
+
+
 
 .nav-links a:hover {
     color: chocolate;
@@ -114,14 +92,55 @@ header.shadow .logo {
 }
 
 
+.logoimg {
+    width: 80px;
+    /* Set the width of the image */
+    height: 80px;
+    /* Set the height of the image */
+    display: block;
+    /* Set the display property to block */
+}
 
 .logo {
     font-size: 1.5rem;
     font-weight: 700;
-    color: #111;
-    padding-left: 200px;
-    text-decoration: none;
+    color: var(--bg-color);
+    padding-left: 3.3rem;
 }
+.container {
+    max-width: 1500px;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    /* Ensure the container takes the full height of the header */
+
+}
+
+header {
+    position: fixed;
+    display: inline-block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 200;
+    background: var(--text-color);
+    box-shadow: 0 1px 4px hsl(0 4% 14% / 10%);
+    transition: .5s;
+    height: 85px;
+    background-color: white;
+
+}
+
+header.shadow {
+    background: var(--bg-color);
+    box-shadow: 0 4px 7px hsl(0 6% 17% / 13%);
+    transition: .5s;
+}
+
+header.shadow .logo {
+    color: var(--text-color);
+}
+
 
 
 .subscribe {
@@ -133,7 +152,7 @@ header.shadow .logo {
     color: #333;
     text-decoration: none;
     transition: 0.5s;
-    margin-right: 12.5rem;
+
 }
 
 .subscribe:hover {
